@@ -129,7 +129,7 @@ VARINIT         "__INIT"
     /* Master lfuns */
 
 ABS_PATH        "make_path_absolute"
-COMP_OBJ        "compile_object"
+COMPILE_OBJECT  "compile_object"
 CONNECT         "connect"
 DANGLING_LFUN   "dangling_lfun_closure"
 DISCONNECT      "disconnect"
