@@ -6,6 +6,10 @@ See the file HISTORY for a user-oriented summary of all the changes.
       by Philipp - thanks!).
   - (configure, Makefile) Added a target 'install-headers' to install
       all driver LPC header files.
+  - (simulate.c) Virtual blueprint objects are guaranteed to have their
+      'clone' flag unset.
+  - (string_spec, simulate.c) Renamed COMP_OBJ to the more intuitive
+      COMPILE_OBJECT.
 
 20-Feb-2006  (Lars Duening)
   - (Makefile.in) Added a dependency to create patchlevel.h, even if
